--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1,14 +1,4 @@
 
-@Article{	  AbuGroSimCareatal19,
-  author	= {Ola Abualghaib and Nora Groce and Natalie Simeu and Mark
-		  Carew and Daniel Mont},
-  title		= {Making visible the invisible: Why disability-disaggregated
-		  data is vital to ``leave non-one behind''},
-  journal	= {Sustainability},
-  volume	= {11},
-  year		= {2019}
-}
-
 @InProceedings{	  adel2018discovering,
   title		= {Discovering interpretable representations for both deep
 		  generative and discriminative models},
@@ -35,7 +25,7 @@
   title		= {A Reductions Approach to Fair Classification},
   author	= {Agarwal, Alekh and Beygelzimer, Alina and Dudik, Miroslav
 		  and Langford, John and Wallach, Hanna},
-  booktitle	= {ICML},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {60--69},
   year		= {2018},
   volume	= {80}
@@ -56,8 +46,8 @@
   title		= {Label-embedding for image classification},
   author	= {Akata, Zeynep and Perronnin, Florent and Harchaoui, Zaid
 		  and Schmid, Cordelia},
-  journal	= {IEEE transactions on pattern analysis and machine
-		  intelligence},
+  journal	= {IEEE Transactions on Pattern Analysis and Machine
+		  Intelligence},
   volume	= {38},
   number	= {7},
   pages		= {1425--1438},
@@ -70,8 +60,7 @@
 		  classification},
   author	= {Akata, Zeynep and Reed, Scott and Walter, Daniel and Lee,
 		  Honglak and Schiele, Bernt},
-  booktitle	= {Proceedings of the IEEE Conference on Computer Vision and
-		  Pattern Recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {2927--2936},
   year		= {2015}
 }
@@ -193,7 +182,7 @@
   title		= {Zero-Shot Semantic Segmentation},
   author	= {Bucher, Maxime and Vu,Tuan-Hung and Cord, Matthieu and
 		  Pérez,Patrick},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   year		= {2019}
 }
 
@@ -201,8 +190,7 @@
   title		= {Building classifiers with independency constraints},
   author	= {Calders, Toon and Kamiran, Faisal and Pechenizkiy,
 		  Mykola},
-  booktitle	= {Data mining workshops, 2009. ICDMW'09. IEEE international
-		  conference on},
+  booktitle	= {IEEE International Conference on Data Mining Workshops},
   pages		= {13--18},
   year		= {2009},
   organization	= {IEEE}
@@ -260,8 +248,7 @@
 @InProceedings{	  chiappa2019path,
   title		= {Path-specific counterfactual fairness},
   author	= {Chiappa, Silvia},
-  booktitle	= {Proceedings of the AAAI Conference on Artificial
-		  Intelligence},
+  booktitle	= {AAAI Conference on Artificial Intelligence},
   volume	= {33},
   pages		= {7801--7808},
   year		= {2019}
@@ -271,7 +258,7 @@
   title		= {Fair clustering through fairlets},
   author	= {Chierichetti, Flavio and Kumar, Ravi and Lattanzi, Silvio
 		  and Vassilvitskii, Sergei},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {5029--5037},
   year		= {2017}
 }
@@ -281,8 +268,7 @@
 		  multi-domain image-to-image translation},
   author	= {Choi, Yunjey and Choi, Minje and Kim, Munyoung and Ha,
 		  Jung-Woo and Kim, Sunghun and Choo, Jaegul},
-  booktitle	= {Proceedings of the IEEE Conference on Computer Vision and
-		  Pattern Recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {8789--8797},
   year		= {2018}
 }
@@ -349,8 +335,7 @@
   title		= {Causal Modeling for Fairness In Dynamical Systems},
   author	= {Creager, Elliot and Madras, David and Pitassi, Toniann and
 		  Zemel, Richard},
-  booktitle	= {Proceedings of the 37th International Conference on
-		  Machine Learning},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {2185--2195},
   year		= {2020},
   editor	= {Hal Daumé III and Aarti Singh},
@@ -375,22 +360,16 @@
 		  Toniann Pitassi and Richard Zemel},
   booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {1436--1445},
-  year		= {2019},
-  editor	= {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
-  volume	= {97},
-  series	= {Proceedings of Machine Learning Research},
-  publisher	= {PMLR}
+  year		= {2019}
 }
 
 @InProceedings{	  dauphin2017language,
   title		= {Language modeling with gated convolutional networks},
   author	= {Dauphin, Yann N and Fan, Angela and Auli, Michael and
 		  Grangier, David},
-  booktitle	= {Proceedings of the 34th International Conference on
-		  Machine Learning-Volume 70},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {933--941},
-  year		= {2017},
-  organization	= {JMLR. org}
+  year		= {2017}
 }
 
 @InProceedings{	  DeaRuzSegShletal13,
@@ -399,8 +378,7 @@
 		  Yagnik},
   title		= {Fast, Accurate Detection of 100, 000 Object Classes on a
 		  Single Machine},
-  booktitle	= {2013 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, Portland, OR, USA, June 23-28, 2013},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {1814--1821},
   publisher	= {{IEEE} Computer Society},
   year		= {2013}
@@ -427,7 +405,7 @@
   author	= {Amir Dezfouli and Edwin V. Bonilla},
   title		= {Scalable Inference for Gaussian Process Models with
 		  Black-Box Likelihoods},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {1414--1422},
   year		= {2015}
 }
@@ -436,8 +414,7 @@
   title		= {Bayesian fairness},
   author	= {Dimitrakakis, Christos and Liu, Yang and Parkes, David C
 		  and Radanovic, Goran},
-  booktitle	= {Proceedings of the AAAI Conference on Artificial
-		  Intelligence},
+  booktitle	= {AAAI Conference on Artificial Intelligence},
   volume	= {33},
   pages		= {509--516},
   year		= {2019}
@@ -455,8 +432,8 @@
   author	= {{Dinh}, Laurent and {Sohl-Dickstein}, Jascha and {Bengio},
 		  Samy},
   title		= "{Density estimation using {R}eal NVP}",
-  booktitle	= {Proceedings of the 5th International Conference on
-		  Learning Representations (ICLR)},
+  booktitle	= {International Conference on Learning Representations
+		  (ICLR)},
   year		= "2017"
 }
 
@@ -464,7 +441,7 @@
   title		= {Empirical Risk Minimization Under Fairness Constraints},
   author	= {Donini, Michele and Oneto, Luca and Ben-David, Shai and
 		  Shawe-Taylor, John S and Pontil, Massimiliano},
-  booktitle	= {NeurIPS},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   pages		= {2796--2806},
   year		= {2018}
 }
@@ -569,12 +546,8 @@
   title		= {Bayesian Modeling of Intersectional Fairness: The Variance
 		  of Bias},
   booktitle	= {Proceedings of the 2020 {SIAM} International Conference on
-		  Data Mining, {SDM} 2020, Cincinnati, Ohio, USA, May 7-9,
-		  2020 [the conference was canceled because of the
-		  coronavirus pandemic, the reviewed papers are published in
-		  this volume]},
+		  Data Mining (SDM)},
   pages		= {424--432},
-  publisher	= {{SIAM}},
   year		= {2020}
 }
 
@@ -600,8 +573,7 @@
   author	= {Sorelle A. Friedler and Carlos Scheidegger and Suresh
 		  Venkatasubramanian},
   title		= {On the (im)possibility of fairness},
-  journal	= {CoRR},
-  volume	= {abs/1609.07236},
+  journal	= {arXiv preprint arXiv:1609.07236},
   year		= {2016}
 }
 
@@ -620,13 +592,8 @@
 @InProceedings{	  GanVanGeoProetal20,
   author	= {Wouter Van Gansbeke and Simon Vandenhende and Stamatios
 		  Georgoulis and Marc Proesmans and Luc Van Gool},
-  editor	= {Andrea Vedaldi and Horst Bischof and Thomas Brox and
-		  Jan{-}Michael Frahm},
   title		= {{SCAN:} Learning to Classify Images Without Labels},
-  booktitle	= {Computer Vision - {ECCV} 2020 - 16th European Conference,
-		  Glasgow, UK, August 23-28, 2020, Proceedings, Part {X}},
-  series	= {Lecture Notes in Computer Science},
-  volume	= {12355},
+  booktitle	= {European Conference on Computer Vision (ECCV)},
   pages		= {268--285},
   publisher	= {Springer},
   year		= {2020}
@@ -637,7 +604,7 @@
 		  Inference with {GPU} Acceleration},
   author	= {Gardner, Jacob R and Pleiss, Geoff and Bindel, David and
 		  Weinberger, Kilian Q and Wilson, Andrew Gordon},
-  booktitle	= {NeurIPS},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   pages		= {7587--7597},
   year		= {2018}
 }
@@ -647,7 +614,7 @@
   journal	= "Current Opinion in Neurobiology",
   volume	= "46",
   pages		= "178 - 186",
-  author	= "Leon A .Gatys and Alexander S Ecker and Matthias Bethge",
+  author	= "Leon A. Gatys and Alexander S Ecker and Matthias Bethge",
   year		= "2017"
 }
 
@@ -655,8 +622,7 @@
   title		= {Image style transfer using convolutional neural networks},
   author	= {Gatys, Leon A and Ecker, Alexander S and Bethge,
 		  Matthias},
-  booktitle	= {Proceedings of the IEEE conference on computer vision and
-		  pattern recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {2414--2423},
   year		= {2016}
 }
@@ -676,7 +642,7 @@
   title		= {Satisfying Real-world Goals with Dataset Constraints},
   author	= {Goh, Gabriel and Cotter, Andrew and Gupta, Maya and
 		  Friedlander, Michael P},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   editor	= {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon
 		  and R. Garnett},
   pages		= {2415--2423},
@@ -687,12 +653,8 @@
   author	= {Ian J. Goodfellow and Jean Pouget{-}Abadie and Mehdi Mirza
 		  and Bing Xu and David Warde{-}Farley and Sherjil Ozair and
 		  Aaron C. Courville and Yoshua Bengio},
-  editor	= {Zoubin Ghahramani and Max Welling and Corinna Cortes and
-		  Neil D. Lawrence and Kilian Q. Weinberger},
   title		= {Generative Adversarial Nets},
-  booktitle	= {Advances in Neural Information Processing Systems 27:
-		  Annual Conference on Neural Information Processing Systems
-		  2014, December 8-13 2014, Montreal, Quebec, Canada},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {2672--2680},
   year		= {2014}
 }
@@ -702,17 +664,10 @@
 		  Mehdi and Xu, Bing and Warde-Farley, David and Ozair,
 		  Sherjil and Courville, Aaron and Bengio, Yoshua},
   title		= {Generative Adversarial Nets},
-  booktitle	= {Proceedings of the 27th International Conference on Neural
-		  Information Processing Systems - Volume 2},
-  series	= {NIPS'14},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   year		= {2014},
   location	= {Montreal, Canada},
-  pages		= {2672--2680},
-  numpages	= {9},
-  url		= {http://dl.acm.org/citation.cfm?id=2969033.2969125},
-  acmid		= {2969125},
-  publisher	= {MIT Press},
-  address	= {Cambridge, MA, USA}
+  pages		= {2672--2680}
 }
 
 @Article{	  GPflow2017,
@@ -728,14 +683,13 @@
   volume	= {18},
   number	= {40},
   pages		= {1-6},
-  url		= {http://jmlr.org/papers/v18/16-537.html}
 }
 
 @InProceedings{	  gretton2008kernel,
   title		= {A kernel statistical test of independence},
   author	= {Gretton, Arthur and Fukumizu, Kenji and Teo, Choon H and
 		  Song, Le and Sch{\"o}lkopf, Bernhard and Smola, Alex J},
-  booktitle	= {Advances in neural information processing systems},
+  journal	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {585--592},
   year		= {2008}
 }
@@ -744,8 +698,7 @@
   author	= {Aditya Grover and Kristy Choi and Rui Shu and Stefano
 		  Ermon},
   title		= {Fair Generative Modeling via Weak Supervision},
-  journal	= {CoRR},
-  volume	= {abs/1910.12008},
+  journal	= {arXiv preprint arXiv:1910.12008},
   year		= {2019}
 }
 
@@ -760,7 +713,7 @@
 @Article{	  hamerly2004learning,
   title		= {Learning the k in k-means},
   author	= {Hamerly, Greg and Elkan, Charles},
-  journal	= {Advances in Neural Information Processing Systems},
+  journal	= {Advances in Neural Information Processing Systems (NIPS)},
   volume	= {16},
   pages		= {281--288},
   year		= {2004},
@@ -772,20 +725,15 @@
 		  Ehrhardt and Andrea Vedaldi and Andrew Zisserman},
   title		= {Automatically Discovering and Learning New Visual
 		  Categories with Ranking Statistics},
-  booktitle	= {8th International Conference on Learning Representations,
-		  {ICLR} 2020, Addis Ababa, Ethiopia, April 26-30, 2020},
-  publisher	= {OpenReview.net},
-  year		= {2020},
-  url		= {https://openreview.net/forum?id=BJl2\_nVFPB},
-  timestamp	= {Thu, 07 May 2020 17:11:47 +0200},
-  biburl	= {https://dblp.org/rec/conf/iclr/HanREVZ20.bib},
-  bibsource	= {dblp computer science bibliography, https://dblp.org}
+  booktitle	= {International Conference on Learning Representations
+		  (ICLR)},
+  year		= {2020}
 }
 
 @InProceedings{	  hardt2016equality,
   title		= {Equality of Opportunity in Supervised Learning},
   author	= {Hardt, Moritz and Price, Eric and Srebro, Nati},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {3315--3323},
   year		= {2016}
 }
@@ -793,16 +741,10 @@
 @InProceedings{	  HasSriNamLia18,
   author	= {Tatsunori B. Hashimoto and Megha Srivastava and Hongseok
 		  Namkoong and Percy Liang},
-  editor	= {Jennifer G. Dy and Andreas Krause},
   title		= {Fairness Without Demographics in Repeated Loss
 		  Minimization},
-  booktitle	= {Proceedings of the 35th International Conference on
-		  Machine Learning, {ICML} 2018, Stockholmsm{\"{a}}ssan,
-		  Stockholm, Sweden, July 10-15, 2018},
-  series	= {Proceedings of Machine Learning Research},
-  volume	= {80},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {1934--1943},
-  publisher	= {{PMLR}},
   year		= {2018}
 }
 
@@ -848,7 +790,7 @@
   author	= {Hern{\'a}ndez-Lobato, Daniel and Sharmanska, Viktoriia and
 		  Kersting, Kristian and Lampert, Christoph H and Quadrianto,
 		  Novi},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {837--845},
   year		= {2014}
 }
@@ -868,8 +810,7 @@
 		  S{\'{e}}bastien Racani{\`{e}}re and Lo{\"{\i}}c Matthey and
 		  Danilo J. Rezende and Alexander Lerchner},
   title		= {Towards a Definition of Disentangled Representations},
-  journal	= {CoRR},
-  volume	= {abs/1812.02230},
+  journal	= {arXiv preprint arXiv:1812.02230},
   year		= {2018}
 }
 
@@ -907,7 +848,7 @@
   title		= {Coresets for clustering with fairness constraints},
   author	= {Huang, Lingxiao and Jiang, Shaofeng and Vishnoi,
 		  Nisheeth},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   pages		= {7587--7598},
   year		= {2019}
 }
@@ -924,7 +865,7 @@
 @InProceedings{	  ilse2018attention,
   title		= {Attention-based deep multiple instance learning},
   author	= {Ilse, Maximilian and Tomczak, Jakub and Welling, Max},
-  booktitle	= {International Conference on Machine Learning},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {2127--2136},
   year		= {2018},
   organization	= {PMLR}
@@ -943,8 +884,7 @@
 		  networks},
   author	= {Isola, Phillip and Zhu, Jun-Yan and Zhou, Tinghui and
 		  Efros, Alexei A},
-  booktitle	= {Proceedings of the IEEE conference on computer vision and
-		  pattern recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {1125--1134},
   year		= {2017}
 }
@@ -971,7 +911,7 @@
   title		= {Unsupervised Adversarial Invariance},
   author	= {Jaiswal, Ayush and Wu, Rex Yue and Abd-Almageed, Wael and
 		  Natarajan, Prem},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   pages		= {5092--5102},
   year		= {2018}
 }
@@ -997,7 +937,7 @@
 		  learning},
   author	= {Jiang, Heinrich and Nachum, Ofir},
   booktitle	= {International Conference on Artificial Intelligence and
-		  Statistics},
+		  Statistics (AISTATS)},
   pages		= {702--712},
   year		= {2020},
   organization	= {PMLR}
@@ -1027,7 +967,7 @@
   title		= {Fairness in learning: Classic and contextual bandits},
   author	= {Joseph, Matthew and Kearns, Michael and Morgenstern, Jamie
 		  H and Roth, Aaron},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {325--333},
   year		= {2016}
 }
@@ -1036,7 +976,7 @@
   title		= {Fairness in learning: Classic and contextual bandits},
   author	= {Joseph, Matthew and Kearns, Michael and Morgenstern, Jamie
 		  H and Roth, Aaron},
-  booktitle	= {NIPS},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {325--333},
   year		= {2016}
 }
@@ -1107,11 +1047,7 @@
   pages		= {240--248},
   publisher	= {{ACM}},
   year		= {2019},
-  url		= {https://doi.org/10.1145/3287560.3287578},
-  doi		= {10.1145/3287560.3287578},
-  timestamp	= {Tue, 08 Oct 2019 14:34:25 +0200},
-  biburl	= {https://dblp.org/rec/conf/fat/KannanRZ19.bib},
-  bibsource	= {dblp computer science bibliography, https://dblp.org}
+  doi		= {10.1145/3287560.3287578}
 }
 
 @InProceedings{	  KeaNeeRotWu18,
@@ -1153,7 +1089,7 @@
   year		= {2020},
   publisher	= {Springer International Publishing},
   doi		= {10.1007/978-3-030-58604-1},
-  booktitle	= {Computer Vision – ECCV 2020},
+  booktitle	= {European Conference on Computer Vision (ECCV)},
   numpages	= {779},
   location	= {Glasgow, UK},
   sortname	= {Kehrenberg},
@@ -1199,8 +1135,7 @@
 @Article{	  KhaRagLia19,
   author	= {Fereshte Khani and Aditi Raghunathan and Percy Liang},
   title		= {Maximum Weighted Loss Discrepancy},
-  journal	= {CoRR},
-  volume	= {abs/1906.03518},
+  journal	= {arXiv preprint arXiv:1906.03518},
   year		= {2019}
 }
 
@@ -1248,7 +1183,7 @@
 		  biased data},
   author	= {Kim, Byungju and Kim, Hyunwoo and Kim, Kyungsu and Kim,
 		  Sungjin and Kim, Junmo},
-  booktitle	= {Computer Vision and Pattern Recognition (CVPR)},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {9012--9020},
   year		= {2019}
 }
@@ -1320,8 +1255,7 @@
   title		= {Generalized zero-shot learning via synthesized examples},
   author	= {Kumar Verma, Vinay and Arora, Gundeep and Mishra, Ashish
 		  and Rai, Piyush},
-  booktitle	= {Proceedings of the IEEE conference on computer vision and
-		  pattern recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {4281--4289},
   year		= {2018}
 }
@@ -1335,23 +1269,12 @@
   year		= {2017}
 }
 
-@InProceedings{	  LacBauLucGeletal19,
-  title		= {Challenging common assumptions in the unsupervised
-		  learning of disentangled representations},
-  author	= {Locatello, Francesco and Bauer, Stefan and Lucic, Mario
-		  and Gelly, Sylvain and Sch{\"o}lkopf, Bernhard and Bachem,
-		  Olivier},
-  booktitle	= {International Conference on Machine Learning (ICML)},
-  year		= {2019}
-}
-
 @InProceedings{	  lampert2009,
   title		= {Learning to detect unseen object classes by between-class
 		  attribute transfer},
   author	= {Lampert, Christoph H and Nickisch, Hannes and Harmeling,
 		  Stefan},
-  booktitle	= {2009 IEEE Conference on Computer Vision and Pattern
-		  Recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year		= {2009}
 }
 
@@ -1366,10 +1289,9 @@
 }
 
 @InProceedings{	  larochelle2008,
-  title		= {Zero-data learning of new tasks.},
+  title		= {Zero-data learning of new tasks},
   author	= {Larochelle, Hugo and Erhan, Dumitru and Bengio, Yoshua},
-  booktitle	= {Association for the Advancement of Artificial Intelligence
-		  (AAAI)},
+  booktitle	= {AAAI Conference on Artificial Intelligence},
   year		= {2008}
 }
 
@@ -1390,7 +1312,7 @@
 		  permutation-invariant neural networks},
   author	= {Lee, Juho and Lee, Yoonho and Kim, Jungtaek and Kosiorek,
 		  Adam and Choi, Seungjin and Teh, Yee Whye},
-  booktitle	= {International Conference on Machine Learning},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {3744--3753},
   year		= {2019},
   organization	= {PMLR}
@@ -1429,22 +1351,8 @@
 @InProceedings{	  liu2019variance,
 title={On the Variance of the Adaptive Learning Rate and Beyond},
 author={Liyuan Liu and Haoming Jiang and Pengcheng He and Weizhu Chen and Xiaodong Liu and Jianfeng Gao and Jiawei Han},
-booktitle={International Conference on Learning Representations},
-year={2020},
-url={https://openreview.net/forum?id=rkgz2aEKDr}
-}
-
-@InCollection{	  LocAbbRaiBauetal19,
-  title		= {On the Fairness of Disentangled Representations},
-  author	= {Locatello, Francesco and Abbati, Gabriele and Rainforth,
-		  Thomas and Bauer, Stefan and Sch\"{o}lkopf, Bern\-hard and
-		  Bachem, Olivier},
-  booktitle	= {Advances in Neural Information Processing Systems 32},
-  editor	= {H. Wallach and H. Larochelle and A. Beygelzimer and F.
-		  dAlch\'{e}-Buc and E. Fox and R. Garnett},
-  pages		= {14611--14624},
-  year		= {2019},
-  publisher	= {Curran Associates, Inc.}
+booktitle={International Conference on Learning Representations (ICLR)},
+year={2020}
 }
 
 @InProceedings{	  locatello2019challenging,
@@ -1454,17 +1362,19 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  and Gelly, Sylvain and Sch{\"o}lkopf, Bernhard and Bachem,
 		  Olivier},
   booktitle	= {International Conference on Machine Learning (ICML)},
-  year		= {2019}
+  year		= {2019},
+  sortname = {locatello-a}
 }
 
 @InProceedings{	  locatello2019fairness,
-  title		= {On the fairness of disentangled representations},
+  title		= {On the Fairness of Disentangled Representations},
   author	= {Locatello, Francesco and Abbati, Gabriele and Rainforth,
-		  Thomas and Bauer, Stefan and Sch{\"o}lkopf, Bernhard and
+		  Thomas and Bauer, Stefan and Sch{\"o}lkopf, Bern\-hard and
 		  Bachem, Olivier},
-  booktitle	= {Advances in Neural Information Processing Systems},
-  pages		= {14584--14597},
-  year		= {2019}
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
+  pages		= {14611--14624},
+  year		= {2019},
+  sortname = {locatello-b}
 }
 
 @InProceedings{	  louizos2016variational,
@@ -1503,16 +1413,6 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   organization	= {ACM}
 }
 
-@Article{	  MadCrePitZem18,
-  author	= {David Madras and Elliot Creager and Toniann Pitassi and
-		  Richard S. Zemel},
-  title		= {Learning Adversarially Fair and Transferable
-		  Representations},
-  journal	= {CoRR},
-  volume	= {abs/1802.06309},
-  year		= {2018}
-}
-
 @Article{	  maddison2016concrete,
   title		= {The concrete distribution: A continuous relaxation of
 		  discrete random variables},
@@ -1521,13 +1421,12 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   year		= {2016}
 }
 
-@Article{	  madras2018learning,
-  title		= {Learning Adversarially Fair and Transferable
-		  Representations},
-  author	= {Madras, David and Creager, Elliot and Pitassi, Toniann and
-		  Zemel, Richard},
-  journal	= {arXiv preprint arXiv:1802.06309},
-  year		= {2018}
+@inproceedings{madras2018learning,
+  title={Learning Adversarially Fair and Transferable Representations},
+  author={Madras, David and Creager, Elliot and Pitassi, Toniann and Zemel, Richard},
+  booktitle	= {International Conference on Machine Learning (ICML)},
+  pages={3384--3393},
+  year={2018}
 }
 
 @InProceedings{	  mary2019fairness,
@@ -1590,7 +1489,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  Biased Classifier},
   author	= {Jun Hyun Nam and Hyuntak Cha and Sungsoo Ahn and Jaeho Lee
 		  and Jinwoo Shin},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
  pages = {20673--20684},
  volume = {33},
   year		= {2020}
@@ -1700,8 +1599,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   year		= {2017},
   editor	= {Satyen Kale and Ohad Shamir},
   volume	= {65},
-  series	= {Proceedings of Machine Learning Research},
-  url		= {http://proceedings.mlr.press/v65/woodworth17a.html}
+  series	= {Proceedings of Machine Learning Research}
 }
 
 @InProceedings{	  PyTorch2017,
@@ -1718,7 +1616,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   title		= {Recycling privileged learning and distribution matching
 		  for fairness},
   author	= {Quadrianto, Novi and Sharmanska, Viktoriia},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {677--688},
   year		= {2017}
 }
@@ -1728,19 +1626,15 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  for Fairness},
   author	= {Quadrianto, Novi and Sharmanska, Viktoriia},
   booktitle	= {Advances in Neural Information Processing Systems 30},
-  editor	= {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach
-		  and R. Fergus and S. Vishwanathan and R. Garnett},
   pages		= {677--688},
-  year		= {2017},
-  publisher	= {Curran Associates, Inc.},
-  url		= {http://papers.nips.cc/paper/6670-recycling-privileged-learning-and-distribution-matching-for-fairness.pdf}
+  year		= {2017}
 }
 
 @InProceedings{	  QuaShaTho19,
   author	= {Novi Quadrianto and Viktoriia Sharmanska and Oliver
 		  Thomas},
   title		= {Discovering Fair Representations in the Data Domain},
-  booktitle	= {Computer Vision and Pattern Recognition (CVPR)},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {8227--8236},
   publisher	= {Computer Vision Foundation / {IEEE}},
   year		= {2019}
@@ -1826,7 +1720,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  Deep Generative Models},
   author	= {Danilo Jimenez Rezende and Shakir Mohamed and Daan
 		  Wierstra},
-  booktitle	= {ICML},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   pages		= {1278--1286},
   year		= {2014}
 }
@@ -1858,8 +1752,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  Percy Liang},
   title		= {An Investigation of Why Overparameterization Exacerbates
 		  Spurious Correlations},
-  journal	= {CoRR},
-  volume	= {abs/2005.04345},
+  journal	= {arXiv preprint arXiv:2005.04345},
   year		= {2020}
 }
 
@@ -1868,8 +1761,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  variational autoencoders},
   author	= {Schonfeld, Edgar and Ebrahimi, Sayna and Sinha, Samarth
 		  and Darrell, Trevor and Akata, Zeynep},
-  booktitle	= {Proceedings of the IEEE Conference on Computer Vision and
-		  Pattern Recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {8247--8255},
   year		= {2019}
 }
@@ -1891,9 +1783,8 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   author	= {Rui Shu and Yining Chen and Abhishek Kumar and Stefano
 		  Ermon and Ben Poole},
   title		= {Weakly Supervised Disentanglement with Guarantees},
-  booktitle	= {8th International Conference on Learning Representations,
-		  {ICLR} 2020, Addis Ababa, Ethiopia, April 26-30, 2020},
-  publisher	= {OpenReview.net},
+  booktitle	= {International Conference on Learning Representations
+		  (ICLR)},
   year		= {2020}
 }
 
@@ -1902,7 +1793,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  and Albert Gu and Christopher R{\'{e}}},
   title		= {No Subclass Left Behind: Fine-Grained Robustness in
 		  Coarse-Grained Classification Problems},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   year		= {2020}
 }
 
@@ -1971,7 +1862,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 @InProceedings{	  vanhatalo2009gaussian,
   title		= {Gaussian process regression with {S}tudent-t likelihood},
   author	= {Vanhatalo, Jarno and Jyl{\"a}nki, Pasi and Vehtari, Aki},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {1910--1918},
   year		= {2009}
 }
@@ -1981,7 +1872,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   author	= {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and
 		  Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and
 		  Kaiser, {\L}ukasz and Polosukhin, Illia},
-  booktitle	= {Advances in neural information processing systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {5998--6008},
   year		= {2017}
 }
@@ -2010,7 +1901,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   title		= {Unlocking Fairness: a Trade-off Revisited},
   author	= {Wick, Michael and Panda, Swetasudha and Tristan,
 		  Jean-Baptiste},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   pages		= {8783--8792},
   volume	= {32},
   year		= {2019}
@@ -2064,7 +1955,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 		  causality-based fairness},
   author	= {Wu, Yongkai and Zhang, Lu and Wu, Xintao and Tong,
 		  Hanghang},
-  booktitle	= {Advances in Neural Information Processing Systems},
+  booktitle	= {Advances in Neural Information Processing Systems (NeurIPS)},
   pages		= {3404--3414},
   year		= {2019}
 }
@@ -2073,8 +1964,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   title		= {Feature generating networks for zero-shot learning},
   author	= {Xian, Yongqin and Lorenz, Tobias and Schiele, Bernt and
 		  Akata, Zeynep},
-  booktitle	= {Proceedings of the IEEE conference on computer vision and
-		  pattern recognition},
+  booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages		= {5542--5551},
   year		= {2018}
 }
@@ -2114,8 +2004,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   editor	= {Dimitris N. Metaxas and Long Quan and Alberto Sanfeliu and
 		  Luc Van Gool},
   title		= {The power of comparative reasoning},
-  booktitle	= {{IEEE} International Conference on Computer Vision, {ICCV}
-		  2011, Barcelona, Spain, November 6-13, 2011},
+  booktitle	= {{IEEE} International Conference on Computer Vision (ICCV)},
   pages		= {2431--2438},
   publisher	= {{IEEE} Computer Society},
   year		= {2011}
@@ -2125,7 +2014,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   title		= {Fairness Constraints: Mechanisms for Fair Classification},
   author	= {Zafar, Muhammad Bilal and Valera, Isabel and Gomez
 		  Rodriguez, Manuel and Gummadi, Krishna P},
-  booktitle	= {Artificial Intelligence and Statistics},
+  booktitle	= {Artificial Intelligence and Statistics (AISTATS)},
   pages		= {962--970},
   year		= {2017},
   sorttitle	= {a}
@@ -2159,7 +2048,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   title		= {Learning Fair Representations},
   author	= {Zemel, Richard and Wu, Yu and Swersky, Kevin and Pitassi,
 		  Toniann and Dwork, Cynthia},
-  booktitle	= {International Conference on Machine Learning},
+  booktitle	= {International Conference on Machine Learning (ICML)},
   series	= {Proceedings of Machine Learning Research},
   pages		= {325--333},
   year		= {2013}
@@ -2169,7 +2058,7 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
   title		= {Examining {CNN} representations with respect to dataset
 		  bias},
   author	= {Zhang, Quanshi and Wang, Wenguan and Zhu, Song-Chun},
-  booktitle	= {Thirty-Second AAAI Conference on Artificial Intelligence},
+  booktitle	= {AAAI Conference on Artificial Intelligence},
   year		= {2018}
 }
 
@@ -2216,22 +2105,20 @@ url={https://openreview.net/forum?id=rkgz2aEKDr}
 @inproceedings{ roh2021fairbatch,
 title={FairBatch: Batch Selection for Model Fairness},
 author={Yuji Roh and Kangwook Lee and Steven Euijong Whang and Changho Suh},
-booktitle={International Conference on Learning Representations},
-year={2021},
-url={https://openreview.net/forum?id=YNnpaAKeCfx}
+booktitle={International Conference on Learning Representations (ICLR)},
+year={2021}
 }
 
 @inproceedings{ khalifa2021distributional,
 title={A Distributional Approach to Controlled Text Generation},
 author={Muhammad Khalifa and Hady Elsahar and Marc Dymetman},
-booktitle={International Conference on Learning Representations},
-year={2021},
-url={https://openreview.net/forum?id=jWkw45-9AbL}
+booktitle={International Conference on Learning Representations (ICLR)},
+year={2021}
 }
 
 @inproceedings{stiennon2020learning,
  author = {Stiennon, Nisan and Ouyang, Long and Wu, Jeffrey and Ziegler, Daniel and Lowe, Ryan and Voss, Chelsea and Radford, Alec and Amodei, Dario and Christiano, Paul F},
- booktitle = {Advances in Neural Information Processing Systems},
+ booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
  pages = {3008--3021},
  title = {Learning to summarize with human feedback},
  volume = {33},
@@ -2248,7 +2135,7 @@ url={https://openreview.net/forum?id=jWkw45-9AbL}
 @inproceedings{lohaus2020too,
   title={Too relaxed to be fair},
   author={Lohaus, Michael and Perrot, Micha\"el and von Luxburg, Ulrike},
-  booktitle={International Conference on Machine Learning},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={6360--6369},
   year={2020},
   organization={PMLR}
@@ -2271,4 +2158,21 @@ url={https://openreview.net/forum?id=jWkw45-9AbL}
   author={Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
   journal={arXiv preprint arXiv:2005.14165},
   year={2020}
+}
+
+@inproceedings{ustun2019fairness,
+  title={Fairness without harm: Decoupled classifiers with preference guarantees},
+  author={Ustun, Berk and Liu, Yang and Parkes, David},
+  booktitle={International Conference on Machine Learning (ICML)},
+  pages={6373--6382},
+  year={2019},
+  organization={PMLR}
+}
+
+@inproceedings{kim2019multiaccuracy,
+  title={Multiaccuracy: Black-box post-processing for fairness in classification},
+  author={Kim, Michael P and Ghorbani, Amirata and Zou, James},
+  booktitle={Proceedings of the 2019 AAAI/ACM Conference on AI, Ethics, and Society},
+  pages={247--254},
+  year={2019}
 }
