--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -41,7 +41,7 @@ So, the criticism that we are only learning from biased data does not apply here
 This should allow us to be more confident in the predictions of those methods.
 
 Throughout this thesis, the aim is to learn a model from biased training data,
-which gives fair predictions on an unbiased training set.
+which gives fair predictions on an unbiased test set.
 It is thus not enough to simply optimize the cross-entropy on the training set;
 we have to change the optimization target to achieve our stated goal.
 While it is possible to extend notions of fairness beyond classification tasks,
