--- a/ch/2-related-work.tex
+++ b/ch/2-related-work.tex
@@ -822,10 +822,11 @@ than the features \(x\), which is arguably an unusual case.
 % On the ProPublica/COMPAS dataset,
 % the proposed algorithm performed within error just as well as the fair baseline algorithm.
 
-This topic has since received more contributions than I can explain here,
-so I will just point to them.
-In the direction of \citet{zafar2017fairnessconstraints}, there is \citet{quadrianto2017recycling,lohaus2020too}.
-In the direction of \citet{kamiran2012data}, there is \citet{AgaBeyDudLanetal18,roh2021fairbatch}.
+This topic has since received more contributions than can be listed here.
+The following is a very short sample.
+In the direction of \citet{zafar2017fairnessconstraints}, there is for example \citet{quadrianto2017recycling,ustun2019fairness,lohaus2020too}.
+In the direction of \citet{kamiran2012data}, there is for example \citet{AgaBeyDudLanetal18,roh2021fairbatch}.
+In the direction of \citet{hardt2016equality}, there is for example \citet{kim2019multiaccuracy}.
 
 \subsection{Fair representations continued}
 With the emergence of adversarial neural networks, interest was renewed in creating fair representations.
