--- a/FrontBackmatter/Bibliography.tex
+++ b/FrontBackmatter/Bibliography.tex
@@ -12,7 +12,9 @@
   \addcontentsline{toc}{chapter}{\tocEntry{#1}}%
   \chapter*{#1}%
 }
+\begin{refcontext}[sorting=nyt]
 \printbibliography[heading=bibintoc]
+\end{refcontext}
 
 % Old version, will be removed later
 % work-around to have small caps also here in the headline
