--- a/main.tex
+++ b/main.tex
@@ -105,7 +105,7 @@ titlepage,numbers=noenddot,%1headlines,
   language=british,%
   %style=numeric-comp,%
   %bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
-  sorting=nyt, % name, year, title
+  sorting=ynt, % name, year, title
   uniquelist=false,
   maxbibnames=10, % default: 3, et al.
   maxcitenames=2,
